# hachiko-api

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
src/: edinet_api_client.rs  main.rs
src/edinet_documents/: reports.db
src/models/: api.rs  financial_statements.rs  mod.rs  quarterly_report.rs  xbrl.rs
