[package]
name = "hachiko-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
zip = "0.5"
quick-xml = "0.24"